[package]
name = "error-code-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.20.9"
proc-macro2 = "1"
quote = "1"
syn = {version = "2", features = ["extra-traits"]}

[dev-dependencies]
anyhow = {workspace=true}
thiserror = {workspace=true}
